# recommend-system

./: README.md  index.html  styles.css
storage/clawbot/arm_cpu_emulator_cpp/: .gitignore  CMakeLists.txt  README.md
storage/clawbot/arm_cpu_emulator_cpp/include/arm_cpu/: config.hpp  cpu.hpp  error.hpp  types.hpp
storage/clawbot/arm_cpu_emulator_cpp/include/arm_cpu/analysis/: aggregator.hpp  anomaly_detector.hpp  function_profiler.hpp  region_selector.hpp  topdown.hpp
storage/clawbot/arm_cpu_emulator_cpp/include/arm_cpu/chi/: chi_coherence.hpp  chi_directory.hpp  chi_interconnect.hpp  chi_interface.hpp  chi_manager.hpp  chi_node.hpp  chi_protocol.hpp  chi_qos.hpp  chi_timing.hpp  hn_f.hpp  rn_f.hpp  sn_f.hpp
storage/clawbot/arm_cpu_emulator_cpp/include/arm_cpu/decoder/: aarch64_decoder.hpp
storage/clawbot/arm_cpu_emulator_cpp/include/arm_cpu/detail/: static_vector.hpp
storage/clawbot/arm_cpu_emulator_cpp/include/arm_cpu/elf/: elf_loader.hpp
storage/clawbot/arm_cpu_emulator_cpp/include/arm_cpu/input/: binary_trace.hpp  champsim_trace.hpp  instruction_source.hpp  text_trace.hpp  trace_input.hpp
storage/clawbot/arm_cpu_emulator_cpp/include/arm_cpu/memory/: cache.hpp  controller.hpp  ddr_controller.hpp  (+3 more)
storage/clawbot/arm_cpu_emulator_cpp/scripts/: build.sh  compile_test_elf.sh  test_elf_source.c
storage/clawbot/arm_cpu_emulator_cpp/src/: config.cpp  cpu.cpp  main.cpp
storage/clawbot/arm_cpu_emulator_cpp/src/analysis/: aggregator.cpp  anomaly_detector.cpp  function_profiler.cpp  region_selector.cpp  topdown.cpp
storage/clawbot/arm_cpu_emulator_cpp/src/chi/: chi_coherence.cpp  chi_directory.cpp  chi_interconnect.cpp  chi_interface.cpp  chi_manager.cpp  chi_node.cpp  chi_qos.cpp  chi_timing.cpp  hn_f.cpp  rn_f.cpp  sn_f.cpp
storage/clawbot/arm_cpu_emulator_cpp/src/decoder/: aarch64_decoder.cpp
storage/clawbot/arm_cpu_emulator_cpp/src/elf/: elf_loader.cpp
storage/clawbot/arm_cpu_emulator_cpp/src/input/: binary_trace.cpp  champsim_trace.cpp  instruction_source.cpp  text_trace.cpp  trace_input.cpp
storage/clawbot/arm_cpu_emulator_cpp/src/memory/: cache.cpp  controller.cpp  ddr_controller.cpp  enhanced.cpp  lsq.cpp  memory_subsystem.cpp
storage/clawbot/arm_cpu_emulator_cpp/src/multi_instance/: instance.cpp  manager.cpp
storage/clawbot/arm_cpu_emulator_cpp/src/ooo/: dependency.cpp  ooo_engine.cpp  parallel.cpp  scheduler.cpp  window.cpp
storage/clawbot/arm_cpu_emulator_cpp/src/output/: konata_writer.cpp
storage/clawbot/arm_cpu_emulator_cpp/src/simulation/: pipeline_tracker.cpp  simulation_engine.cpp
storage/clawbot/arm_cpu_emulator_cpp/src/stats/: performance_metrics.cpp  stats_collector.cpp
storage/clawbot/arm_cpu_emulator_cpp/src/trace/: binary_format.cpp  binary_reader.cpp  binary_writer.cpp
storage/clawbot/arm_cpu_emulator_cpp/src/visualization/: konata_format.cpp  pipeline_tracker_viz.cpp  visualization_state.cpp
storage/clawbot/arm_cpu_emulator_cpp/tests/: test_config.cpp  test_memory.cpp  test_ooo.cpp  test_types.cpp
storage/clawbot/arm_cpu_emulator_cpp/tools/: viz_demo.cpp  viz_demo.html  viz_demo_data.json
storage/clawbot/arm_cpu_emulator_cpp/tools/viz_server/: README.md  app_static.js  index.html  pipeline_view.js  style.css  viz_demo_data.json
(+108 files in other folders)
